refresh commit